# AdventOfCode

./: .gitignore  README.md  main.py  retrieveInput.sh  rustfmt.toml  setup.py  test_unittests.py
2018/2018_day3/: testinput2018day3_part2
2018/day4/: Cargo.toml
2019/: SolutionDay02.py  SolutionDay10.py
2020/: .gitignore  CMakeLists.txt  README.md
2020/src/: DeclarationFormCalculator.cpp  DeclarationFormCalculator.h  Group.cpp  Group.h  PassportValidator.cpp  PassportValidator.h  SeatCalculator.cpp  SeatCalculator.h  SolutionHandler.cpp  SolutionHandler.h  SpecialOperator.cpp  SpecialOperator.h  Utils.h  main.cpp
2020/test/: CMakeLists.txt  DeclarationFormCalculatorTests.cpp  GroupTests.cpp  PassportValidatorTests.cpp  SeatCalculatorTests.cpp  SpecialOperatorTests.cpp
2020/test/mocks/: MockPassportValidator.h
2021/: main.py
2022/: SolutionDay01.py  SolutionDay03.py  SolutionDay04.py  SolutionDay05.py  SolutionDay06.py  SolutionDay07.py  SolutionDay08.py
2022/input_ut/: inpututday7_2
2023/2023_day3/: exampleinput2023day3_2  exampleinput2023day3_4
2023/day03/: exampleinput2023day3_3
2023/day05/: Cargo.toml
2023/day07_1/: exampleinput2023day7_2
2023/day09/: Cargo.toml
2023/day1/: Cargo.toml
2023/day10/: exampleinput2023day10_4  test3  test4  test5  test7  test8
2023/day11/: Cargo.toml
2023/day12/: Cargo.toml
2024/day07/: test2  (+4 more)
AOC2022/: SolutionDay01.py  SolutionDay02.py  SolutionDay03.py  SolutionDay04.py  test_unittests.py
solutions/: SolutionDay01.py  SolutionDay02.py
utils/: AocEnums.py  AocUtils.py  BFSExample.py  FileReader.py
(+110 files in other folders)
